<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <!-- Format Filter -->
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scraping_format"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/margin_small" />

    <Spinner
        android:id="@+id/spinnerFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_medium" />

    <!-- Date Filter -->
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scraping_date"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/margin_small" />

    <Spinner
        android:id="@+id/spinnerDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_medium" />

    <!-- Max Decks -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_decks"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMaxDecks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="5" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
